# pipeline-generator

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: go-api.yaml  node-express.yaml  python-fastapi.yaml
pipeline_generator/: __init__.py  cli.py  detector.py  generator.py  models.py  presets.py
pipeline_generator/output/: console.py
tests/: conftest.py  test_generator.py
