[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeline-generator"
version = "1.0.0"
description = "Generate production-ready CI/CD pipeline configs for GitHub Actions, Azure DevOps, and GitLab CI from a simple YAML spec."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Sanjay S", email = "sanjaysundarmurthy@gmail.com" },
]
keywords = [
    "cicd", "pipeline", "github-actions", "azure-devops", "gitlab-ci",
    "devops", "automation", "ci", "cd", "yaml",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
pipe-gen = "pipeline_generator.cli:cli"

[project.urls]
Homepage = "https://github.com/SanjaySundarMurthy/pipeline-generator"
Repository = "https://github.com/SanjaySundarMurthy/pipeline-generator"
Issues = "https://github.com/SanjaySundarMurthy/pipeline-generator/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py39"
line-length = 100
